--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ libp2p = "0.19.0"
 anyhow = "1.0.31"
 async-std = "< 1.6"
 futures = "0.3.1"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
